// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Paper with props matches the snapshot 1`] = `
<div
  className="Paper-sc-1udhv1r-0 dyWGuC"
/>
`;

exports[`the Paper without props matches the snapshot 1`] = `
<div
  className="Paper-sc-1udhv1r-0 eSByDL"
/>
`;
